<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:background="@color/sangre"
    tools:context=".Opciones">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:weightSum="4"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_opciones"
            android:layout_weight="1"
            android:textSize="40sp"
            android:layout_gravity="center_horizontal"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lblDifficulty"
                android:text="@string/str_dificultad"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diff_spinner"
                android:layout_below="@id/lblDifficulty"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"/>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/str_limpiar_puntuacion"
                android:layout_below="@id/diff_spinner"
                android:layout_marginTop="30dp"
                android:textColor="@color/sangre"
                android:backgroundTint="@color/ColorFondo"
                android:id="@+id/button_clear"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center"
                android:layout_centerInParent="true">

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_boton_guardar"
                    android:textColor="@color/sangre"
                    android:backgroundTint="@color/ColorFondo"
                    android:id="@+id/btn_save"/>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/str_menu_principal"
                    android:textColor="@color/sangre"
                    android:backgroundTint="@color/ColorFondo"
                    android:id="@+id/btn_main"
                    android:layout_below="@id/btn_save"/>

            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
